[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/RightSelectionPanel.gd" id="1_right"]
[ext_resource type="Script" path="res://scripts/ui/TowerSelectionPanel.gd" id="2_tower_panel"]

[node name="RightSelectionPanel" type="CanvasLayer"]
script = ExtResource("1_right")

[node name="RightPanel" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
grow_horizontal = 0
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 14.0
offset_right = -10.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="RightPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TowerSelectionPanel" type="Control" parent="RightPanel/Margin/VBox"]
unique_name_in_owner = true
script = ExtResource("2_tower_panel")
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="RightPanel/Margin/VBox/TowerSelectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 1

[node name="CardContainer" type="VBoxContainer" parent="RightPanel/Margin/VBox/TowerSelectionPanel/Scroll"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpeedButton" type="Button" parent="RightPanel/Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Ã—1"

[node name="OptimizeButton" type="Button" parent="RightPanel/Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Optimize Fold"

[node name="RetryButton" type="Button" parent="RightPanel/Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Retry"
